@startuml


class Teacher{
-name: CharField
-email: EmailField
-area: Charfield
}

class Student{
-name: CharField
-email: EmailField
-ra: CharField
}

class Preference{
-q1: CharFieldChoicesAaE
-q2: CharFieldChoicesAaE
-q3: CharFieldChoicesAaE
-q4: CharFieldChoicesAaE
-q5: CharFieldChoicesAaE
-student: ForeignKeyStudent
}

class Content{
-title: CharField
-description: TextField
-url: CharField
-category: ForeignKeyCategory
-teacher: ForeignKeyTeacher
}

class Category{
 name: CharField
 description: TextField
}

class Recommendetion{
-studant: ForeignKeyStudent
-content: ForeignKeyContent
}


Teacher --o Content
Category --o Content
Student --o Recommendetion
Student --o Preference
Content --o Recommendetion

@enduml
